...

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealTitle"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealCalories"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealCarbs"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealPro"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealFat"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout7"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealFibre"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout8"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealSugar"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout9"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealSodium"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout10"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealPotassium"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout11"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealVitA"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout12"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealVitC"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout13"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealCalcium"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <LinearLayout
      android:id="@+id/linearLayout14"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/mealIron"
        android:layout_width="110dp"
        android:layout_height="40dp"
...

  <Button
      android:id="@+id/saveMeal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:text="Save meal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
...
