<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text="Home"-->
<!--        android:textSize="50sp"-->
<!--        android:textStyle="bold" />-->

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp"
        android:text="@string/steps"
        android:textColor="@color/black"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/tv_stepsTaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="184dp"
        android:layout_below="@+id/steps"
        android:text="@string/stepCount"
        android:textColor="@color/black"
        android:textSize="37sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/bottom_navigation"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="90dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_baseline_directions_run_24" />

    <TextView
        android:id="@+id/workout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="156dp"
        android:text="Add Workout"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/sleep" />

    <TextView
        android:id="@+id/sleep_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="34dp"
        android:text="Add Sleep"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="90dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/diet" />

    <TextView
        android:id="@+id/meals_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="107dp"
        android:text="Add Meal"
        android:visibility="invisible" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/purple_500"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>