<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/ic_baseline_home_24" />

    <item
        android:id="@+id/journal"
        android:title="Journal"
        android:icon="@drawable/ic_clipboard_svgrepo_com" />

    <item
        android:id="@+id/browse"
        android:title="Browse"
        android:icon="@drawable/ic_list_with_bullets_svgrepo_com" />

</menu>