...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintVertical_bias="0.15"/>

            <TextView
                android:id="@+id/tv_mealTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="TextView"
                android:textSize="22sp"
                android:textStyle="bold"
...
